<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:attr="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorWhite"
    android:scrollbars="none"
    tools:context="com.ts.iplay.fragment.MineFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRed"
            android:paddingBottom="32.0dip"
            android:paddingLeft="19.899994dip">

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingBottom="20.0dip"
                android:paddingLeft="20.0dip"
                android:paddingRight="18.699982dip"
                android:paddingTop="20.0dip"
                android:src="@mipmap/icon_pgmy1_set" />

            <ImageView
                android:id="@+id/iv_icon_head_bg"
                android:layout_width="84.0dip"
                android:layout_height="84.0dip"
                android:layout_marginTop="26.0dip"
                android:src="@mipmap/img_pgmy1_heartbj" />

            <TextView
                android:id="@+id/signIn"
                android:layout_width="54.19998dip"
                android:layout_height="24.0dip"
                android:layout_alignParentRight="true"
                android:layout_below="@id/iv_setting"
                android:layout_marginTop="35.799988dip"
                android:background="@mipmap/btn_pgmy_sign"
                android:gravity="center"
                android:paddingLeft="6.0dip"
                android:text="@string/signIn"
                android:textColor="@color/colorWhite" />

            <com.ts.iplay.view.MaskRoundCornerImageView
                android:id="@+id/iv_icon_head"
                android:layout_width="77.0dip"
                android:layout_height="77.0dip"
                android:layout_marginLeft="4.0dip"
                android:layout_marginTop="30.0dip"
                android:background="@mipmap/img_pgmy1_heartbj"
                android:src="@mipmap/img_pgmy2"
                attr:maskColor="@color/mask_pic"
                attr:radiusX="21.0dip"
                attr:radiusY="21.0dip" />

            <TextView
                android:id="@+id/tvLevel"
                android:layout_width="29.0dip"
                android:layout_height="14.5dip"
                android:layout_alignBottom="@id/iv_icon_head"
                android:layout_alignRight="@id/iv_icon_head"
                android:layout_marginBottom="2.0dip"
                android:layout_marginRight="-8.0dip"
                android:background="@drawable/shape_blue_angle_bg"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="9.5sp"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/ll_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_icon_head_bg"
                android:layout_alignTop="@id/iv_icon_head_bg"
                android:layout_toLeftOf="@id/iv_setting"
                android:layout_toRightOf="@id/iv_icon_head_bg"
                android:gravity="center|left"
                android:paddingLeft="19.899994dip">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6.0dip"
                        android:text="@string/txt_mine_pealse_login"
                        android:textColor="@color/mine_please_login"
                        android:textSize="15.399994sp" />

                    <TextView
                        android:id="@+id/tvHonor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.5dip"
                        android:layout_marginTop="2.0dip"
                        android:layout_toRightOf="@id/tv_name"
                        android:background="@drawable/shape_yellow_line_rect_bg"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:paddingBottom="2.5dip"
                        android:paddingLeft="6.5dip"
                        android:paddingRight="6.5dip"
                        android:paddingTop="2.5dip"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/text_Yellow"
                        android:textSize="9.5sp"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/llMedal"
                        android:layout_width="wrap_content"
                        android:layout_height="19.0dip"
                        android:layout_below="@id/tv_name"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/tv_gold_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name"
                        android:layout_marginLeft="6.0dip"
                        android:layout_marginTop="2.0dip"
                        android:layout_toRightOf="@id/llMedal"
                        android:drawableLeft="@mipmap/icon_pgmy1_money"
                        android:drawablePadding="3.5999756dip"
                        android:text="0"
                        android:textColor="@color/mine_jifen"
                        android:textSize="11.599976sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_top_pic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@mipmap/img_pgmy1_redbj" />

            <LinearLayout
                android:id="@+id/ll_integral"
                app:layout_widthPercent="100.0%"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_top_pic"
                android:gravity="center"
                android:paddingBottom="8.0dip"
                android:paddingTop="8.0dip">

                <TextView
                    android:id="@+id/tv_integral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@mipmap/icon_pgmy1_house"
                    android:drawableRight="@mipmap/img_pgmy1_hot"
                    android:gravity="center"
                    android:text="@string/txt_mine_integral_welfare"
                    android:textColor="@color/common_main_text"
                    android:textSize="15.399994sp" />

                <TextView
                    android:id="@+id/tvBoonShopDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:text="@string/go_to_int_mall"
                    android:textColor="@color/mine_boon_des"
                    android:textSize="10.5sp" />
            </LinearLayout>
        </android.support.percent.PercentRelativeLayout>


    </LinearLayout>
</ScrollView>
